# url-shortener-rs

./: .gitignore  Cargo.toml  README.md  Secrets.dev.toml  Secrets.toml  Shuttle.toml
.github/workflows/: ci.yml
sql/: schema.dev.sql  schema.sql
src/: main.rs
